# pdf-scraping-etl

./: .gitignore  LICENSE  README.md  gemini.md  gemini.md.txt  pyproject.toml  requirements.txt
data/output/: cleaned_data.csv  extracted_text.txt
src/: etl_pipeline.py  logger.py  pdf_extractor.py  scraper.py
tests/: test_etl_pipeline.py  test_pdf_extractor.py  test_scraper.py
